<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSmsTitle"
        style="@style/TextView.Title.Big.Bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/default_margin_large"
        android:gravity="center_horizontal"
        android:text="@string/sms_code_title"
        app:layout_constraintBottom_toTopOf="@id/tvSmsHint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSmsHint"
        style="@style/SupportTitleTextView.Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_large"
        android:layout_marginEnd="@dimen/default_margin_large"
        android:text="@string/sms_code_hint"
        app:layout_constraintBottom_toTopOf="@id/codePinEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSmsTitle" />

    <com.alimuzaffar.lib.pin.PinEntryEditText
        android:id="@+id/codePinEntry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_slarge"
        android:layout_marginEnd="@dimen/default_margin_slarge"
        android:cursorVisible="false"
        android:digits="1234567890"
        android:inputType="number"
        android:maxLength="4"
        android:textIsSelectable="false"
        android:textSize="@dimen/default_text_title"
        android:imeOptions="actionDone"
        app:layout_constraintBottom_toTopOf="@id/tvSmsPenalty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSmsHint"
        app:pinBackgroundDrawable="@drawable/rect_pin_entry"
        app:pinCharacterMask="*"
        app:pinLineStrokeSelected="@dimen/default_margin_small" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvSmsPenalty"
        style="@style/SupportTitleTextView.Default"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_xsmall"
        android:layout_marginEnd="@dimen/default_margin_xsmall"
        android:singleLine="false"
        android:text="@string/sms_code_expiration_timeout"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@id/ll_buttons"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/codePinEntry"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/tvSupportTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSmsTitle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/submitButton"
            style="@style/Button.Auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_button" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/requestSmsButton"
            style="@style/Button.Auth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin_xsmall"
            android:text="@string/send_sms_button"
            android:visibility="gone"
            tools:visibility="visible" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/rlErrorView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin_xsmall"
        android:layout_marginBottom="@dimen/default_margin_sbig"
        android:background="@color/red"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@id/ll_buttons"
        tools:visibility="visible">

        <TextView
            android:id="@+id/tvError"
            style="@style/AuthErrorTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginTop="@dimen/default_margin_xsmall"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin_xsmall"
            tools:text="@string/error_login_or_password" />
    </RelativeLayout>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/bottomBarrier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.90" />

    <TextView
        android:id="@+id/tvSupportTitle"
        style="@style/SupportTitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin_small"
        android:text="@string/support_title"
        app:layout_constraintBottom_toTopOf="@id/tvSupportPhone"
        app:layout_constraintTop_toBottomOf="@id/bottomBarrier" />

    <TextView
        android:id="@+id/tvSupportPhone"
        style="@style/SupportPhoneTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin_double"
        android:text="@string/support_phone_number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvSupportTitle" />

    <com.gravitygroup.avangard.view.loading.LoadingView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/default_loading_elevation" />

</androidx.constraintlayout.widget.ConstraintLayout>