<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackgroundColor"
    android:orientation="vertical"
    android:clipToPadding="false">

    <ScrollView
        android:id="@+id/scrollableView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clipToPadding="false">

        <LinearLayout
            android:id="@+id/llAuth"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingBottom="@dimen/default_margin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="62dp"
                android:layout_marginBottom="@dimen/default_margin_sbig"
                android:src="@drawable/ic_logo"
                tools:ignore="ContentDescription" />

            <RelativeLayout
                android:id="@+id/rlErrorView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:layout_marginBottom="@dimen/default_margin_sbig"
                android:background="@color/red"
                android:visibility="gone"
                tools:visibility="visible">

                <TextView
                    android:id="@+id/tvError"
                    style="@style/AuthErrorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/default_margin"
                    android:layout_marginTop="@dimen/default_margin_xsmall"
                    android:layout_marginEnd="@dimen/default_margin"
                    android:layout_marginBottom="@dimen/default_margin_xsmall"
                    tools:text="@string/error_login_or_password" />
            </RelativeLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilLogin"
                style="@style/LoginInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:theme="@style/TextInputLayoutAppearance">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etLogin"
                    style="@style/LoginFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/login_hint"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/tilPassword"
                style="@style/LoginInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin"
                android:layout_marginEnd="@dimen/default_margin"
                android:theme="@style/TextInputLayoutAppearance"
                app:passwordToggleDrawable="@drawable/show_password_selector"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    style="@style/LoginFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/submitButton"
                style="@style/Button.Auth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin"
                android:layout_marginTop="@dimen/default_margin_double_half"
                android:layout_marginEnd="@dimen/default_margin"
                android:text="@string/next_button" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSmsPenalty"
                style="@style/SupportTitleTextView.Default"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/default_margin_slarge"
                android:layout_marginTop="@dimen/default_margin_double_half"
                android:layout_marginEnd="@dimen/default_margin_slarge"
                android:singleLine="false"
                android:text="@string/sms_code_expiration_timeout"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@id/codePinEntry"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/codePinEntry"
                tools:visibility="visible" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/ll_support"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="@dimen/default_margin_double"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/tvSupportTitle"
            style="@style/SupportTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin_small"
            android:text="@string/support_title" />

        <TextView
            android:id="@+id/tvSupportPhone"
            style="@style/SupportPhoneTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/default_margin"
            android:text="@string/support_phone_number"
            app:layout_constraintTop_toBottomOf="@id/tvSupportTitle" />
    </LinearLayout>

    <com.gravitygroup.avangard.view.loading.LoadingView
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/default_loading_elevation" />

</androidx.constraintlayout.widget.ConstraintLayout>
