<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/confirmDialogRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/transparent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.0" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/dialogTitle"
        style="@style/TextView.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_padding"
        android:layout_marginTop="@dimen/default_margin_20"
        android:layout_marginEnd="@dimen/default_padding"
        android:gravity="center_horizontal"
        app:layout_constraintBottom_toTopOf="@id/dialogConfirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline1"
        tools:text="@string/exit_title" />


    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogConfirm"
        style="@style/Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin_upper_double_36"
        android:layout_marginEnd="@dimen/default_margin_xsmall"
        android:layout_marginBottom="@dimen/default_margin_20"
        app:layout_constraintEnd_toStartOf="@id/dialogDeny"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle"
        tools:text="@string/exit_confirm" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialogDeny"
        style="@style/Button.Light"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin_xsmall"
        android:layout_marginTop="@dimen/default_margin_upper_double_36"
        android:layout_marginEnd="@dimen/default_margin"
        android:layout_marginBottom="@dimen/default_margin_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/dialogConfirm"
        app:layout_constraintTop_toBottomOf="@id/dialogTitle"
        tools:text="@string/exit_deny" />

</androidx.constraintlayout.widget.ConstraintLayout>